--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>Welcome to Fullstack Zoo</h1>
+      <h1>Welcome to the Fullstack Zoo</h1>
       <section>
         <h2>Bears</h2>
         <ul>
